[package]
name = "ds"
description = "A library for controlling FIRST Robotics Competition robots"
license = "MIT/Apache-2.0"
repository = "https://gitlab.com/Redrield/ds-rs"
documentation = "https://docs.rs/ds"
readme = "README.md"
version = "1.2.4"
keywords = ["frc", "first", "robotics"]
categories = ["network-programming"]
authors = ["Kaitlyn Kenwell <redrield@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = "2"
byteorder = "1.2.7"
failure = "0.1.3"
chrono = "0.4.6"
crossbeam-channel = "0.5.8"
smallvec = "1.11.0"
tokio = { version = "1.29", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
bytes = "1.4"
futures-channel = "0.3.1"
futures-util = { version = "0.3.1", features = ["sink", "async-await"] }
futures = "0.3.1"
rand = "0.8"
tokio-stream = "0.1.14"
